# sovereign-kernel

./: .gitignore  Cargo.toml  Cycle_7112_Session_Log.txt  README.md  aria_disruption_marker_8022.txt  aria_intent.json  aria_intent_queue.json  aria_journal.json  aria_response.txt  aria_status.txt  build_ready.txt  craig_messages.json  cycle_decision_manifest_14708.txt  dashboard.js  disruption_marker.txt  disruption_marker_10608.txt  disruption_marker_8014.txt  disruption_marker_Cycle8015.txt  launch-aria.ps1  master_memory.txt  opencode_chat.json  run-aria-forever.bat  start-aria.bat  start-aria.ps1  state_log.txt  stderr.txt
skills/: 1password.md  algorithmic-art.md  apple-notes.md  apple-reminders.md  bear-notes.md  blogwatcher.md  blucli.md  bluebubbles.md  brand-guidelines.md  build.md  camsnap.md  canvas.md  claude-api.md  clawhub.md  code-exec.md  code-sculptor.md  coding-agent.md  data-analysis.md  discord.md  doc-coauthoring.md  docx.md  drawio.md  dynamic-api-weaver.md  eightctl.md  email-compose.md  encryption.md  file-system.md  frontend-design.md  gemini.md  gh-issues.md  gifgrep.md  git-ops.md  github.md  gog.md  google-workspace.md  goplaces.md  healthcheck.md  himalaya.md  http-client.md  image-prompt-recommend.md  (+61 more)
souls/: harvester.json  love_weaver.json  profit_prime.json  soul_architect.json  soul_auditor.json  soul_betty.json  soul_builder.json  soul_collector.json  soul_deerg.json  soul_profit.json  soul_scout.json  soul_scribe.json  soul_teacher.json  tax_collector.json
src/: audit.rs  main.rs
